# BlackHole_Renderer

./: .gitignore  CLEANUP_SUMMARY.md  Cargo.toml  LICENSE  README.md
docs/: project_documentation.md
examples/: cpu_image.rs  ray_tracing.rs
shaders/: fullscreen.wgsl  trace.wgsl
src/: app.rs  lib.rs  main.rs
src/gpu/: compute.rs  state.rs
src/physics/: geodesic.rs  integration.rs  mod.rs  schwarzschild.rs
src/renderer/: camera.rs  cpu_reference.rs  scene.rs
src/renderer_gpu/: mod.rs  shader.wgsl  state.rs
