[package]
name = "blackhole_renderer"
version = "0.1.0"
edition = "2021"
description = "Real-time GPU black hole renderer with gravitational lensing and accretion disk simulation"
license = "MIT"
repository = "https://github.com/gaurav13407/BlackHole_Renderer"

[dependencies]
winit="0.29"
wgpu="0.19"
glam="0.25"
image="0.24"
anyhow="1.0"
pollster="0.3"
bytemuck = { version = "1", features = ["derive"] }

[[example]]
name = "ray_tracing"
path = "examples/ray_tracing.rs"

[[example]]
name="cpu_image"
path="examples/cpu_image.rs"


